Resolved deprecated constructor calls